@@ -630,14 +630,19 @@ setMethodS3("segmentByCBS", "default", function(y, chromosome=0L, x=NULL, index=
 
   sampleName <- "y";  # This is going to be the name of the data field
 
-  cnData <- DNAcopy::CNA(
-    genomdat  = data$y,
-    chrom     = data$chrom,
-    data.type = "logratio",
-    maploc    = data$x,
-    sampleid  = sampleName,
-    presorted = TRUE
-  );
+  # Supress all warnings, in order to avoid warnings by DNAcopy::CNA()
+  # on "array has repeated maploc positions".  Ideally we should filter
+  # just those out. /HB 2013-10-22
+  suppressWarnings({
+    cnData <- DNAcopy::CNA(
+      genomdat  = data$y,
+      chrom     = data$chrom,
+      data.type = "logratio",
+      maploc    = data$x,
+      sampleid  = sampleName,
+      presorted = TRUE
+    );
+  });
   verbose && str(verbose, cnData);
   names(cnData)[3] <- sampleName;
   verbose && str(verbose, cnData);
