@@ -3,7 +3,9 @@ Package: PSCBS
 ==============
 
 Version: 0.39.0 [2013-10-22]
-o Added getBootstrapLocusSets() for PairedPSCBS.  Added a package 
+o Now all warnings generated by DNAcopy::CNA() are suppressed,
+  including the common one on "array has repeated maploc positions".
+o Added getBootstrapLocusSets() for PairedPSCBS.  Added a package
   system test for it.
 o Added argument 'subset' to applyByRegion() for PairedPSCBS.
 o Added clearBootstrapSummaries() for PairedPSCBS.
